src/App.css
/*
INDEX
- GENERAL
- BUTTONS
- HEADER
- PROJECTS
- MORE PROJECTS
- ABOUT
- FOOTER
*/

:root {
	--text-black: #333333;
	--text-white: #fafafa;
	--text-grey: #7f7f7f;

	--accent-blue: #4700ff;

	--bg-light-main: #fafafa;
	--bg-light-secondary: #f0f2f5;

	--bg-dark-main: #000000;
	--bg-dark-secondary: #0a0f0f;
	--bg-dark-highlighted: #151e1e;
	--bg-dark-hover: #2b3c3c;

	--font-main: Fira Sans, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
	--font-accent: Fira Code, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;

	/* --bg-img-35: url("../../assets/bg_waves_35.png"); */
	--bg-img-35: url("./assets/bg_waves_35.png");
	--bg-img-15: url("./assets/bg_waves_15.png");
	--bg-img-100: url("./assets/bg_waves_100.png");
}

#root {
	width: 100%;
}

a {
	text-decoration: none;
	color: #fafafa;
}

li {
	list-style: none;
}

/* BUTTONS */

.buttons-container {
	display: flex;
	flex-direction: row;
	gap: 24px;

	.button {
		color: var(--text-white);
		padding: 16px 24px;
		border-radius: 8px;
		outline: none;
		border: none;

		font-family: Fira Code;
		font-size: 14px;
		font-weight: 600;

		&:hover {
			opacity: 0.5;
			cursor: pointer;
		}
	}

	.main {
		background-color: var(--accent-blue);
	}

	.secondary {
		background-color: var(--bg-dark-main);
	}
}

/* HEADER */
header {
	background-image: var(--bg-img-35);
	background-color: var(--accent-blue);

	padding: 40px 80px;
	color: var(--text-white);

	height: 468px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;

	> nav {
		display: flex;
		justify-content: space-between;
		align-items: center;

		list-style: none;
		display: flex;
		gap: 40px;

		.logo {
			font-family: var(--font-main);
			text-transform: uppercase;
			font-size: 40px;
			font-weight: 900;
		}

		> ul {
			display: flex;
			flex-direction: row;
			gap: 40px;

			font-family: var(--font-accent);
			font-size: 16px;
			font-weight: 700;

			> li :hover {
				opacity: 0.5;
			}
		}
	}

	.btm-container {
		display: flex;
		justify-content: space-between;
		align-items: flex-end;

		.description {
			display: flex;
			flex-direction: column;
			gap: 14px;

			> h1 {
				font-family: var(--font-main);
				text-transform: uppercase;
				font-size: 32px;
				font-weight: 900;
				letter-spacing: 0.36px;
				line-height: 100%;
			}

			.name {
				display: flex;
				flex-direction: column;

				> h2 {
					font-size: 16px;
					font-weight: 700;
				}

				> p {
					font-size: 14px;
					font-weight: 500;
				}
			}
		}

		.social-media-container {
			display: flex;
			gap: 32px;

			.social-media-icon {
				font-size: 25px;

				&:hover {
					opacity: 0.5;
				}
			}
		}
	}
}

/* PROJECTS */
section.projects {
	background-color: #fafafa;

	.featured-project {
		display: flex;
		align-items: center;
		flex-direction: column;
		gap: 120px;
		padding: 120px 10vw;

		.title {
			> h1 {
				color: var(--accent-blue);
				font-family: var(--font-accent);
				font-size: 14px;
				font-weight: 500;
			}

			> h2 {
				color: var(--text-black);
				font-family: Fira Sans;
				font-size: 32px;
				font-weight: 800;
				text-transform: uppercase;
				text-align: center;
			}
		}

		.description {
			max-width: 464px;
			color: var(--text-black);
			text-align: center;

			font-family: Fira Sans;
			font-size: 18px;
			font-weight: 400;
			line-height: 150%; /* 27px */
		}
	}
}

/* MORE PROJECTS */
.more-projects {
	background-color: var(--bg-light-secondary);
	padding: 80px 10vw;
	display: flex;
	flex-direction: column;
	gap: 32px;

	> h1 {
		color: var(--accent-blue);
		font-family: Fira Code;
		font-size: 14px;
		font-weight: 500;
	}

	.projects-container {
		display: flex;
		flex-direction: row;
		gap: 64px;

		.project {
			width: 100%;
			display: flex;
			flex-direction: column;
			gap: 48px;

			> img {
				border-radius: 4px;
			}

			.content {
				display: flex;
				flex-direction: column;

				gap: 24px;
				color: var(--text-black);
				font-family: Fira Sans;

				> h2 {
					font-size: 18px;
					font-weight: 600;
				}

				> p {
					font-size: 16px;
					font-weight: 400;
					line-height: 150%; /* 24px */
				}
			}
		}
	}
}

/* ABOUT */
section.about {
	font-family: var(--font-accent);
	color: var(--text-white);

	display: flex;
	flex-direction: column;
	align-items: center;
	width: 100%;
	padding: 120px 0;

	display: flex;
	flex-direction: column;
	gap: 48px;

	background-image: linear-gradient(180deg, var(--bg-dark-main) 0%, transparent 30%), var(--bg-img-15);
	background-color: var(--bg-dark-main);

	.about-content {
		max-width: 980px;
		padding: 32px;
		border-radius: 8px;

		background-color: var(--bg-dark-secondary);

		> h2 {
			text-transform: uppercase;
			font-size: 14px;
			font-style: normal;
			font-weight: 700;
			line-height: 150%; /* 21px */
		}

		.groups-container {
			display: flex;
			flex-wrap: wrap;
			gap: 40px;

			padding-top: 24px;

			.stack-container {
				display: flex;
				gap: 12px;
				flex-direction: column;

				> h3 {
					color: var(--text-grey);
					font-size: 12px;
					font-weight: 500;
				}

				.stack-group {
					display: flex;
					height: 100%;
					gap: 8px;

					.stack {
						width: 86px;
						background-color: var(--bg-dark-highlighted);
						display: flex;
						flex-direction: column;
						align-items: center;

						padding: 16px;
						border-radius: 16px;
						gap: 16px;

						> img {
							padding: 6px;
						}

						> p {
							text-align: center;
							font-size: 12px;
							font-weight: 600;
						}

						&:hover {
							background-color: var(--bg-dark-hover);
						}
					}
				}
			}
		}

		&.personal-info {
			display: flex;
			flex-direction: column;
			justify-content: center;
			align-items: center;
			gap: 40px;

			background-color: transparent;

			> img {
				width: 150px;
				aspect-ratio: 1 / 1;
				border-radius: 50%;
			}

			.description {
				display: flex;
				flex-direction: column;
				gap: 24px;
				max-width: 500px;

				> h2 {
					text-transform: uppercase;
					text-align: center;
					font-size: 14px;
					font-style: normal;
					font-weight: 700;
					line-height: 150%; /* 21px */
				}

				> p {
					opacity: 0.5;
					text-align: center;
					font-size: 14px;
					font-weight: 500;
					line-height: 150%; /* 21px */
				}
			}

			.social-media-container {
				display: flex;
				gap: 40px;

				> .social-media-icon {
					padding: 8px;
					border-radius: 8px;
					display: flex;
					align-items: center;
					justify-content: center;

					> a {
						line-height: 0;
						font-size: 25px;
					}

					&:hover {
						background-color: var(--bg-dark-hover);
						cursor: pointer;
					}
				}
			}
		}

		&.faq {
			display: flex;
			flex-direction: column;
			gap: 16px;

			.question-container {
				display: flex;
				flex-direction: column;
				gap: 24px;
				padding: 24px;
				border-radius: 8px;

				background-color: var(--bg-dark-highlighted);

				font-size: 14px;
				font-weight: 400;
				line-height: 150%; /* 21px */

				.answer {
					opacity: 0.6;
					font-weight: 400;
				}

				&:hover {
					background-color: var(--bg-dark-hover);
				}
			}
		}
	}
}

/* FOOTER */

footer {
	padding: 80px;

	color: #fafafa;
	background-color: black;
	font-family: Fira Code;

	> a {
		display: inline-block;
	}
	.logo {
		font-family: Fira Sans;
		font-size: 40px;
		font-weight: 900;
		text-transform: uppercase;
	}

	.btm {
		display: flex;
		flex-direction: row;
		justify-content: space-between;

		.btm-left {
			width: 60%;
			display: flex;
			flex-direction: row;
			justify-content: space-between;

			.title-container {
				display: flex;
				flex-direction: column;
				justify-content: space-between;

				> h1 {
					font-family: Fira Sans;
					font-size: 16px;
					font-weight: 800;
					letter-spacing: 0.24px;
					text-transform: uppercase;
				}

				h2 {
					font-weight: 500;
					font-size: 12px;
				}
			}

			.contact-container {
				display: flex;
				flex-direction: column;
				justify-content: space-between;
				font-size: 12px;
				font-weight: 500;
			}

			> nav > ul {
				flex-direction: column;
				justify-content: space-between;
				gap: 0;
			}

			> nav > ul ~ li {
				margin: 0;
				padding: 0;
			}

			> nav > ul > li > a {
				font-size: 12px;
				font-weight: 700;
			}
		}

		.btm-right {
			display: flex;
			flex-direction: column;
			justify-content: space-between;

			font-family: Fira Code;
			font-size: 12px;
			font-weight: 700;

			> a:hover {
				opacity: 0.5;
			}
		}
	}
}

